[package]
name = "ivens-amazing-kernel"
version = "0.1.0"
edition = "2021"


[profile.release]
panic = "abort"
lto = true

[profile.dev]
panic = "abort"

[profile.test]
panic = "unwind"

[[bin]]
name = "kernel"
path = "src/main.rs"

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.15.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
